--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SECRET_KEY = 'dfksdfgJHGJHG768gyuU^*%&^%$%^Ftf&R%RTF^R%^FYTF&&FTYfytf65ftyf65fTF^%F%f5ffftf67rf5fv37r3r'
+SECRET_KEY = 'fhgjHGJGUYugy6t76t&^%&^F&f7fug76gyg&^&^GYguyg&G&^65fd43s23s34s#$Suh98hui9hsfgdfgdfgdrhmkploiuoheiubhbc*H*H*h'
