--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ MarkupSafe==2.1.1
 # matplotlib==3.6.2
 # numpy==1.23.4
 packaging==21.3
-pandas==1.5.1
+# pandas==1.5.1
 Pillow==9.3.0
 pyparsing==3.0.9
 python-dateutil==2.8.2
