--- a/requirements.txt
+++ b/requirements.txt
@@ -22,9 +22,9 @@ python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.6
 # scikit-learn==1.1.3
-scipy==1.9.3
+# scipy==1.9.3
 six==1.16.0
-sklearn==0.0
+# sklearn==0.0
 SQLAlchemy==1.4.45
 threadpoolctl==3.1.0
 Werkzeug==2.2.2
