--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 colorama==0.4.6
 contourpy==1.0.6
 cycler==0.11.0
+DateTime==4.9
 Flask==2.2.2
 Flask-SQLAlchemy==3.0.2
 fonttools==4.38.0
@@ -17,6 +18,7 @@ packaging==21.3
 # pandas==1.5.1
 Pillow==9.3.0
 pyparsing==3.0.9
+PyJWT==2.6.0
 python-dateutil==2.8.2
 python-decouple==3.6
 pytz==2022.6
