--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ pytz==2022.6
 # scikit-learn==1.1.3
 # scipy==1.9.3
 six==1.16.0
-# sklearn==0.0
+sklearn==0.0
 SQLAlchemy==1.4.45
 threadpoolctl==3.1.0
 Werkzeug==2.2.2
