--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ packaging==21.3
 # pandas==1.5.1
 Pillow==9.3.0
 pyparsing==3.0.9
+pymongo==4.3.3
 PyJWT==2.6.0
 python-dateutil==2.8.2
 python-decouple==3.6
